# prompt-diff

./: LICENSE  README.md  pyproject.toml
examples/: v1_system.txt  v2_system.txt
src/prompt_diff/: __init__.py  __main__.py  cli.py  differ.py  parser.py
