[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-diff"
version = "0.1.0"
description = "Diff and version control prompt templates with semantic awareness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Cognition Commons", email = "tools@cognitioncommons.org" }
]
keywords = ["llm", "prompts", "diff", "templates", "version-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
prompt-diff = "prompt_diff.cli:main"

[project.urls]
Homepage = "https://github.com/cognitioncommons/prompt-diff"
Documentation = "https://github.com/cognitioncommons/prompt-diff#readme"
Repository = "https://github.com/cognitioncommons/prompt-diff"
Issues = "https://github.com/cognitioncommons/prompt-diff/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_diff"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
]
